<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">污水地图</string>
    <string name="menu_settings">Settings</string>
	<string name="app_host">http://42.120.23.245/Iphone1.2/</string>
	<string name="url">index.php</string>
	<string name="net_error">当前网络不可用，请先连接Internet！</string>
	<string name="loadTitle"><strong>正在更新数据</strong></string>
	<string name="LoadContent"><strong>请稍候……</strong></string>
	<string name="custom_title_back">返回</string>
	<string name="titleSearch">搜索</string>
	<string name="titleRanking">城市排行</string>
	<string name="titleListMode">列表模式</string>
	<string name="titleComplaintDetail">举报详情</string>
	<string name="titleRelatedComment">相关评论</string>
	<string name="titleNewComment">发表评论</string>
	<string name="titleReBroadCast">转发微博</string>
	<string name="titleMe">个人中心</string>
	<string name="titleImageView">查看图片</string>
	<string name="userHeadDesc">用户头像</string>
	<string name="comment">评论</string>
	<string name="reBroadCast">转发</string>
	<string name="titleSetting">关于</string>
	<string name="navLogin">登陆</string>
	<string name="navLogout">注销</string>
	<string name="loginTitle">登入污水地图</string>
	<string-array name="listloginPopup"> 
        <item>用新浪微博登入</item> 
        <item>用腾讯微博登入</item> 
    </string-array> 
	<string name="about1">
		污水地图是一款基于LBS由用户对水污
		染源进行发现、举报、自由评论的移动社区应用。
		污水地图APP通过手机用户在电子地图
		上自建举报标签，上传文字和图片，帮助用户甄别
		水污染源。当用户发现受污染的河流、水源后，可
		医在污水地图APP上建立基于地理位置的该
		地点的举报标签，提醒其他用户。
		
	</string>
	<string name="about2">
	           污水地图APP安装后，用户可以直接用
		新浪、腾讯微博账号直接登录。
	</string>
	<string name="about_Support">
	          技术支持:  污水地图（官方微博）
	</string>
	<string name="complaintName">名称：</string>
	<string name="complaintDetailName">名称：%1$s</string>
	<string name="complaintNameHint">请输入举报的对象名称</string>
	<string name="complaintAddr">地点：</string>
	<string name="complaintDetailAddr">地点：%1$s</string>
	<string name="complaintAddrHint">请输入举报的地址</string>
	<string name="complaintAsysWeibo">同步到微博</string>
	<string name="complaintWeiboPic">点击添加图片</string>
	<string name="complaintCommit">提交</string>
	<string-array name="listModeData"> 
        <item>附近1公里</item> 
        <item>附近2公里</item> 
        <item>附近5公里</item> 
        <item>附近10公里</item> 
    </string-array> 
	<string name="complaintDetailCount">被举报次数：%1$s次</string>
	<string name="compliantImageDesc">污染图片</string>
	<string name="commentContent">评论内容：</string>
	<string name="reBroadCastContent">转发内容：</string>
	<string name="commentContentCount">评论共有（%1$s）条</string>
	<string name="compliantResultSuccess">0</string>
	<string name="mapcontent">长按某点进行举报</string>
</resources>