<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:baselineAligned="false"
        android:paddingBottom="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.8"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewComplaintDetailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/complaintName"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/clrDardRed"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewReComplaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/recomplaint" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewComplaintdetailAddr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/complaintAddr"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/clrGreyText" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextViewComplaintDetailCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/complaintDetailCount"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/clrGreyText" />

            </RelativeLayout>

            <Gallery
                android:id="@+id/galleryComplaintDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" 
                android:unselectedAlpha="0.4"
                android:spacing="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewComplaintList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>